style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Sacramento&display=swap");

/* --color-blue: #457b9d;
  --color-black: #171719;
  --color-red: #e63946; */

body {
  font-family: "Roboto", sans-serif;
  color: #171719;
  background-color: #f5f5f5;
  font-size: 1.6rem;
}
.headline {
  color: #457b9d;
  text-align: center;
  text-shadow: 5px 5px 0 rgba(255, 204, 153, 0.7);
}
.container {
  display: flex;
}

.leftSide {
  width: 30%;
  height: auto;
  display: flex;
  align-items: center;
  justify-content: end;
}


.grid {
  border: 2px solid #a8dadc;
  border-radius: 1rem;
  width: 40rem;
  height: 40rem;
  position: relative;
  display: flex;
  flex-flow: row wrap;
  justify-content: space-around;
 
}

.pixel {
  display: block;
  height: 1rem;
  box-sizing: border-box;
  padding-top: 100%;
  border: 1px solid rgb(221, 221, 221);
  border-radius: 5px;
}

.controlTab {
  background-color: #a8dadc;
  color: #457b9d;
  padding: 1rem;
  border-top-left-radius: 1rem;
  border-bottom-left-radius: 1rem;
  font-size: 1.6rem;
  text-align: center;
  font-weight: 500;
}

.controlTab p{
  margin: 0px;
}
#slider{
  color: #171719;
  font-size: 1.2rem;
}
.apply {
  display: block;
  margin: 0 auto;
  margin-top: 0px;
  padding: 0.5rem 1rem;
  border: none;
  background-color: var(--color-blue);
  color: #ffffff;
  font-weight: 500;
  font-size: 1rem;
  margin-top: 1rem;
  border-radius: 0.5rem;
  background-color: #457b9d;
}
.reset{
  display: block;
  margin: 0 auto;
  margin-top: 0px;
  padding: 0.5rem 1rem;
  border: none;
  background-color: var(--color-blue);
  color: #ffffff;
  font-weight: 500;
  font-size: 1rem;
  margin-top: 1rem;
  border-radius: 0.5rem;
  background-color: #457b9d;
}

